# dtu-quantum-compilers

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
projects/assignment_001/: LICENSE  Makefile  README.md  expression-ambiguous.lark  main.py  pyproject.toml  requirements.txt  test_interpreter.py
projects/assignment_001/errors/: __init__.py
projects/assignment_001/examples/: expression-ambiguous.lark
projects/assignment_001/interpreter/: __init__.py  eval_ast.py  evaluate.py  evaluate_binary_operation.py  evaluate_constant.py  run.py
projects/assignment_001/libs/: __init__.py  read_file.py
projects/assignment_001/src/compiler_v1/: grammar_v1.lark  run.py
projects/assignment_001/src/interpreter/: __init__.py  evaluate_binary_operation.py
projects/assignment_001/src/interpreter_v1/: evaluate.py  evaluate_constant.py  run.py
projects/assignment_001/tests/: test_compiler_v1.py  test_interpreter_v1.py
projects/assignment_002/: Makefile  README.md  initialize.cq  main.py  pyproject.toml  requirements.txt
projects/assignment_002/src/compiler_v2/: __init__.py  grammar_v2.lark  run.py  show.py
projects/assignment_002/src/compiler_v2/typecheck/: __init__.py  block_check.py  exp_check.py  (+13 more)
projects/assignment_002/src/interpreter_v2/: __init__.py  cq.lark  helpers.py  run.py
projects/assignment_002/tests/: fail_duplicate_procedure_parameters.cq  fail_too_many_procedures.cq  success_multiple_procedure_parameter_types.cq  success_procedure_parameters_array_fixed_size.cq  success_procedure_simple_statement.cq  test_compiler_v2.py  test_procedure.py  test_procedure_statement.py
projects/libs/: pyproject.toml
projects/libs/src/libs/: __init__.py
(+26 files in other folders)
