[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment_002"
version = "1.0.0"
description = "Assignment 002: Write a type checker for single-procedure CQ programs."
authors = [{ name = "Kieran O'Neill", email = "zcd890@alumni.ku.dk" }]
readme = "README.md"
requires-python = ">=3.10.12"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["interpreter_v2*"]

[tool.setuptools.package-data]
interpreter_v2 = ["*.lark"]
