[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libs"
version = "1.0.0"
description = "Shared library code."
authors = [{ name = "Kieran O'Neill", email = "zcd890@alumni.ku.dk" }]
requires-python = ">=3.10.12"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["libs*"]
